<resources>
    <string name="app_name">Logica</string>
    <string name="title">Conjunction (AND)</string>
    <string name="btnSubmit">Submit</string>

    <string name="zeroTitle">A</string>
    <string name="oneTitle">B</string>
    <string name="answerTitle">A ^ B</string>

    <string name="zeroZero">T</string>
    <string name="zeroOne">T</string>
    <string name="zeroTwo">F</string>
    <string name="zeroThree">F</string>

    <string name="oneZero">T</string>
    <string name="oneOne">F</string>
    <string name="oneTwo">T</string>
    <string name="oneThree">F</string>

    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>
